# cv-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  alembic.ini  cloudbuild.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  render.yaml  start.sh
alembic/: env.py
alembic/versions/: 2ee691d2b67f_initial_tables.py  a1b2c3d4e5f6_add_google_oauth_fields.py
backend/: config.py  database.py  dependencies.py  main.py  task_manager.py
backend/models/: __init__.py  cv_file.py  job_description.py  match_result.py  monitored_folder.py  parsed_cv.py  processing_log.py  user.py
backend/routers/: auth.py  cv_files.py  export.py  folders.py  job_descriptions.py  matching.py  websocket.py
backend/schemas/: auth.py  cv_file.py  export.py  folder.py  job_description.py  match_result.py  parsed_cv.py
backend/services/: auth_service.py  cv_parser.py  explainer.py  export_service.py  file_parser.py  folder_service.py  jd_service.py  matcher.py
backend/tasks/: celery_app.py  cv_processing.py  matching_tasks.py
backend/utils/: hashing.py  llm_client.py  redis_client.py
backend/watchers/: folder_watcher.py  watcher_manager.py
frontend/: api_client.py  app.py  auth_state.py
frontend/components/: cv_table.py  export_buttons.py  folder_picker.py  jd_editor.py  leaderboard.py  login_form.py  progress_bar.py  sidebar.py
frontend/pages/: cv_detail.py  cv_management.py  dashboard.py  job_descriptions.py  login.py  matching.py
tests/: conftest.py  test_auth.py  test_hashing.py
